--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Olá! Me chamo Gabriel Francisco e sou apaixonado por tecnologia!
+      Atualmente desenvolvo aplicações Fullstack, desde a UI ao Banco de dados, passando pelas mais variadas soluções e algoritmos no Backend e finalmente dando forma na nuvem!"
+    />
     <title>Gabe Dev</title>
     <link rel="icon" href="./public//assets//favicon.png" />
     <link rel="stylesheet" href="./src//styles/tailwind.css" />
